# whisrs

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  index.html  install.sh
.github/workflows/: ci.yml  release.yml
contrib/: 99-whisrs.rules  whisrs.1  whisrs.service  whisrsd.1
contrib/gnome-shell-extension/: README.md
contrib/gnome-shell-extension/whisrs-overlay@eresende.github/: extension.js  metadata.json  stylesheet.css
docs/: faq.md  version-roadmap.md
packaging/aur/: PKGBUILD
src/: history.rs  lib.rs  state.rs
src/audio/: capture.rs  feedback.rs  mod.rs  recovery.rs  silence.rs
src/cli/: main.rs
src/config/: mod.rs  setup.rs
src/daemon/: main.rs
src/hotkey/: linux.rs  mod.rs
src/input/: clipboard.rs  enigo_backend.rs  keymap.rs  mod.rs  uinput.rs
src/overlay/: mod.rs  service.rs
src/post_processing/: filler.rs  mod.rs
src/transcription/: dedup.rs  deepgram.rs  groq.rs  local.rs  local_whisper.rs  mod.rs  openai_realtime.rs  openai_rest.rs
src/tray/: mod.rs  service.rs
src/window/: dbus.rs  hyprland.rs  macos.rs  mod.rs  sway.rs  win32.rs  x11.rs
