[package]
name = "whisrs"
version = "0.1.5"
edition = "2021"
description = "Voice-to-text dictation tool with Groq, OpenAI, and local Whisper backends"
license = "MIT"
repository = "https://github.com/y0sif/whisrs"
homepage = "https://y0sif.github.io/whisrs/"
keywords = ["voice", "dictation", "speech-to-text", "whisper", "cross-platform"]
categories = ["multimedia::audio", "accessibility", "command-line-utilities"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = false
features = []

[[bin]]
name = "whisrs"
path = "src/cli/main.rs"

[[bin]]
name = "whisrsd"
path = "src/daemon/main.rs"

[features]
default = ["local-whisper", "tray"]
local-whisper = ["dep:whisper-rs"]
tray = ["dep:ksni"]

# ── Cross-platform dependencies ──────────────────────────────────────────────
[dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
dialoguer = "0.11"
dirs = "6"
futures-util = "0.3"
hound = "3"
notify-rust = "4"
indicatif = "0.17"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.whisper-rs]
version = "0.16"
optional = true

# ── Unix-only dependencies (Linux + macOS) ───────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Linux-only dependencies ──────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", features = ["tokio"] }
ksni = { version = "0.3", optional = true }
swayipc = "3"
x11rb = "0.13"
xkbcommon = "0.8"
zbus = "5"

# ── Windows-only dependencies ────────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# ── macOS-only dependencies ──────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.3"
